More bootstrap i guess

--- a/gamebook/app/views/games/index.html.erb
+++ b/gamebook/app/views/games/index.html.erb
@@ -15,7 +15,10 @@
 
   <tbody>
     <% @games.each do |game| %>
-      <tr>
+      <section class="col-sm-6 col-md-3">
+        <%= link_to (image_tag game.image_url(:medium), class: 'image'), game, class="thumbnail" %>
+      </section>
+      <!--<tr>
         <td><%= game.titulo %></td>
         <td><%= game.sinopsis %></td>
         <td><%= game.lanzamiento %></td>
@@ -23,7 +26,7 @@
         <td><%= link_to 'Show', game %></td>
         <td><%= link_to 'Edit', edit_game_path(game) %></td>
         <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      </tr>-->
     <% end %>
   </tbody>
 </table>
