--- a/gamebook/app/views/games/show.html.erb
+++ b/gamebook/app/views/games/show.html.erb
@@ -4,7 +4,7 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-md-4">
-        <%= image_tag @game.image_url(:medium) %>
+        <%= image_tag @game.image_url %>
       </div>
       <div class="col-md-7 col-md-offset-1">
         <h1><%= @game.titulo %></h1>
