--- a/gamebook/app/views/layouts/application.html.erb
+++ b/gamebook/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
         <%= content_tag(:div, msg, class: "alert alert-info") %>
       <% end %>
       <%= yield %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+
     </div>
   </body>
 </html>
