--- a/gamebook/app/assets/stylesheets/application.scss
+++ b/gamebook/app/assets/stylesheets/application.scss
@@ -14,3 +14,15 @@
 
 @import "bootstrap";
 
+h1 {
+  text-align: center;
+}
+
+.juegos {
+  margin-top: 2em;
+}
+
+.thumbnail {
+  margin-right: 1em;
+  margin-bottom: 1em;
+}
