--- a/gamebook/app/views/layouts/_header.html.erb
+++ b/gamebook/app/views/layouts/_header.html.erb
@@ -1,19 +1,20 @@
-<nav class="navbar navbar-default navbar-dark bg-dark" role="navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
   <%= link_to "GameBook", games_path, class: "navbar-brand" %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><%= link_to "Juegos", games_path, class: "nav-link active" %></li>
       <li class="nav-item"><%= link_to "Mi lista", games_path, class: "nav-link active" %></li>
       <li class="nav-item"><%= link_to "Amigos", games_path, class: "nav-link disabled" %></li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Buscar..." aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" id="titulo" name="search"
+             placeholder="Buscar..." aria-label="Search">
+      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
     </form>
   </div>
 </nav>
