--- a/gamebook/app/assets/stylesheets/application.scss
+++ b/gamebook/app/assets/stylesheets/application.scss
@@ -26,3 +26,25 @@ h1 {
   margin-right: 1em;
   margin-bottom: 1em;
 }
+
+.gameIcon {
+  text-align: center;
+  margin-top: 4em;
+}
+
+.container {
+  margin-top: 2em;
+}
+
+#gameInfo {
+  border: solid black 1px;
+  padding: 1em;
+  border-radius: 15px;
+}
+
+#comments {
+  margin-top: 2em;
+  padding: 1em;
+  border: solid black 1px;
+  border-radius: 15px;
+}
