--- a/gamebook/app/views/comments/_form.html.erb
+++ b/gamebook/app/views/comments/_form.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 
   <div class="actions">
+    <%= form.label %>
+    <%= form.text_area %>
     <%= form.submit %>
   </div>
 <% end %>
