--- a/gamebook/app/views/games/show.html.erb
+++ b/gamebook/app/views/games/show.html.erb
@@ -11,14 +11,14 @@
         <div class="table-responsive">
           <table class="table">
             <tbody>
-              <tr>
-                <td><strong>Sinopsis:</strong></td>
-                <td><%= @game.sinopsis %></td>
-              </tr>
-              <tr>
-                <td><strong>Fecha de lanzamiento:</strong></td>
-                <td><%= @game.lanzamiento %></td>
-              </tr>
+            <tr>
+              <td><strong>Sinopsis:</strong></td>
+              <td><%= @game.sinopsis %></td>
+            </tr>
+            <tr>
+              <td><strong>Fecha de lanzamiento:</strong></td>
+              <td><%= @game.lanzamiento %></td>
+            </tr>
             </tbody>
           </table>
         </div>
@@ -26,6 +26,14 @@
     </section>
     <section id="comments">
       <h2>Comentarios</h2>
+      <section class="createCom">
+        <h3>Deja tu comentario</h3>
+        <%= form_for([@game, @game.comments.build]) do |f| %>
+          <% f.text_area :body %>
+          <% f.submit %>
+        <% end %>
+      </section>
+      <%= render @game.comments %>
     </section>
   </div>
 </div>
