--- a/gamebook/app/views/gamelists/index.html.erb
+++ b/gamebook/app/views/gamelists/index.html.erb
@@ -1,22 +1,31 @@
-<p id="notice"><%= notice %></p>
+
 
 <h1>Gamelists</h1>
 
 <table>
   <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Portada</th>
+    <th>Título</th>
+    <th>Estado</th>
+    <th>Eliminar</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @gamelists.each do |gamelist| %>
+  <% @gamelists.each do |gamelist| %>
       <tr>
-        <td><%= link_to 'Show', gamelist %></td>
-        <td><%= link_to 'Edit', edit_gamelist_path(gamelist) %></td>
-        <td><%= link_to 'Destroy', gamelist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <div class="gameIcon col-md-4">
+            <%= image_tag gamelist.game .image_url %>
+          </div>
+        </td>
+        <td><%= gamelist.game.titulo %></td>
+        <td><%= gamelist.status %></td>
+
+        <td><%= link_to 'Destroy', gamelist, method: :delete, data: {confirm: "Estás seguro?"} %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
