--- a/gamebook/app/views/layouts/_header.html.erb
+++ b/gamebook/app/views/layouts/_header.html.erb
@@ -8,8 +8,9 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><%= link_to "Juegos", games_path, class: "nav-link active" %></li>
-      <li class="nav-item"><%= link_to "Mi lista", games_path, class: "nav-link active" %></li>
-      <li class="nav-item"><%= link_to "Amigos", games_path, class: "nav-link disabled" %></li>
+      <li class="nav-item"><%= link_to "Mi lista", gamelists_path, class: "nav-link active" %></li>
+      <li class="nav-item"><%= link_to "Amigos", url_for(), class: "nav-link disabled" %></li>
+      <li class="nav-item"><%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class: "nav-link active" %></li>
     </ul>
     <form class="form-inline">
       <input class="form-control mr-sm-2" type="search" id="titulo" name="search"
