--- a/gamebook/app/views/games/show.html.erb
+++ b/gamebook/app/views/games/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="panel panel-default">
   <div class="panel-body">
     <section id="gameInfo" class="row">
@@ -38,16 +36,18 @@
         </div>
       </div>
     </section>
+
+
     <section id="comments">
       <h2>Comentarios</h2>
-      <section class="createCom">
-        <h3>Deja tu comentario</h3>
-        <%= form_for([@game, @game.comments.build]) do |f| %>
-            <% f.text_area :body %>
-            <% f.submit %>
+      <section>
+        <% if @game.comments.blank? %>
+            <h3>Aún no hay comentarios, se tu el primero!</h3>
+        <% else %>
+            <%= render @game.comments %>
         <% end %>
       </section>
-      <%= render @game.comments %>
+      <%= render 'comments/form' %>
     </section>
   </div>
 </div>
