--- a/gamebook/app/assets/stylesheets/application.scss
+++ b/gamebook/app/assets/stylesheets/application.scss
@@ -48,3 +48,16 @@ h1 {
   border: solid black 1px;
   border-radius: 15px;
 }
+
+.listaPersonal {
+  text-align: center;
+  width: 100%;
+}
+
+.listaPersonal td img {
+  width: 30px;
+}
+
+.myheader {
+  background-color: aquamarine;
+}
