--- a/gamebook/app/assets/stylesheets/application.scss
+++ b/gamebook/app/assets/stylesheets/application.scss
@@ -61,3 +61,22 @@ h1 {
 .myheader {
   background-color: aquamarine;
 }
+
+.gbAut {
+  text-align: center;
+  padding: 1em;
+}
+
+.gbAut h2 {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.actions {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+
+.form-control {
+  width: 30%;
+}
