--- a/gamebook/app/views/comments/_form.html.erb
+++ b/gamebook/app/views/comments/_form.html.erb
@@ -1,19 +1,4 @@
-<%= form_with(model: comment, local: true) do |form| %>
-  <% if comment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
-      <ul>
-      <% comment.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= form.label %>
-    <%= form.text_area %>
-    <%= form.submit %>
-  </div>
+<%= form_for Comment.new, url_for: comments_url, method: :post, html: {class: "nifty_form"} do |f| %>
+    <%= f.text_area :body, size: "100x20" %>
+    <%= f.submit "Crear" %>
 <% end %>
