--- a/gamebook/app/views/layouts/_header.html.erb
+++ b/gamebook/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
       <li class="nav-item"><%= link_to "Amigos", url_for(), class: "nav-link disabled" %></li>
       <li class="nav-item"><%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class: "nav-link active" %></li>
     </ul>
-    <form class="form-inline">
+    <form class="form-inline" action="<%= url_for(root_url) %>">
       <input class="form-control mr-sm-2" type="search" id="titulo" name="search"
              placeholder="Buscar..." aria-label="Search">
       <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
