--- a/gamebook/app/views/games/show.html.erb
+++ b/gamebook/app/views/games/show.html.erb
@@ -43,36 +43,39 @@
     <section id="comments">
       <h2>Comentarios</h2>
       <% unless current_user.blank? %>
-          <section>
-            <% if @game.comments.blank? %>
-                <h3>Aún no hay comentarios, se tu el primero!</h3>
-            <% else %>
-                <% @comments.each do |c| %>
-                    <section>
-                      <p> <%= c.body %></p>
-                    </section>
-                <% end %>
+        <section>
+          <% if @game.comments.blank? %>
+            <h3>Aún no hay comentarios, se tú el primero!</h3>
+          <% else %>
+            <% @comments.each do |c| %>
+              <section class="comment">
+                <h3><%= c.user.email %> escribió:</h3>
+                <p> <%= c.body %></p>
+              </section>
             <% end %>
-          </section>
-          <section>
-            <%= form_for Comment.new, url_for: comments_url, method: :post, params: {game_id: @game.id}, html: {class: "nifty_form"} do |f| %>
-                <%= hidden_field_tag "comment[game_id]", "#{@game.id}" %>
-                <%= f.text_area :body, size: "100x20" %>
-                <%= f.submit "Crear" %>
-            <% end %>
-          </section>
+          <% end %>
+        </section>
+        <section class="createComment">
+          <h3>Escribe tu comentario:</h3>
+          <%= form_for Comment.new, url_for: comments_url, method: :post, params: {game_id: @game.id}, html: {class: "nifty_form"} do |f| %>
+            <%= hidden_field_tag "comment[game_id]", "#{@game.id}" %>
+            <%= f.text_area :body, size: "80x5", class: "form-control rounded-0" %> <br/>
+            <%= f.submit "Crear", class: "btn btn-success" %>
+          <% end %>
+        </section>
       <% else %>
-          <section>
-            <% if @game.comments.blank? %>
-                <h3>Aún no hay comentarios, haz login para ser el primero</h3>
-            <% else %>
-                <% @comments.each do |c| %>
-                    <section>
-                      <p> <%= c.body %></p>
-                    </section>
-                <% end %>
-                <h3>Haz login para crear un comentario</h3>
+        <section>
+          <% if @game.comments.blank? %>
+            <h3>Aún no hay comentarios, haz login para ser el primero</h3>
+          <% else %>
+            <% @comments.each do |c| %>
+              <section class="comment">
+                <h3><%= c.user.email %> escribió:</h3>
+                <p> <%= c.body %></p>
+              </section>
             <% end %>
+            <h3>Haz login para crear un comentario</h3>
+          <% end %>
       <% end %>
       </section>
     </section>
