--- a/gamebook/app/views/layouts/_header.html.erb
+++ b/gamebook/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <%= link_to "GameBook", games_path, class: "navbar-brand" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,6 +13,7 @@
       <li class="nav-item"><%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class: "nav-link active" %></li>
     </ul>
     <form class="form-inline" action="<%= url_for(root_url) %>">
+      <label for="titulo" style="visibility: hidden">Búsqueda de videojuegos</label>
       <input class="form-control mr-sm-2" type="search" id="titulo" name="search"
              placeholder="Buscar..." aria-label="Search">
       <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
